[package]
name = "tomorrow-http"
version = "0.1.0"
authors = ["Valentin Fries <contact@fries.io>, Vincent Milano <vincent_mot@hotmail.fr>"]

[dependencies]
tomorrow-core = {git = "https://github.com/tomorrow-paper/tomorrow-core"}

hyper = "0.10.11"
hyper-native-tls = "0.2.3"

serde = "1.0.15"
serde_json = "1.0.4"
serde_derive = "1.0.15"